Fix Redis conditional configuration and modify application.properties to make Redis optional